--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Бункер БОТ</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div class="head"></div>
+    <div class="block-1"></div>
+    <div class="block-2"></div>
+    <div class="block-3"></div>
+    <div class="footer"></div>
+  </body>
 </html>
