Maked bg for header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Бункер БОТ</title>
   </head>
   <body>
-    <div class="head"></div>
+    <div class="header"></div>
     <div class="block-1"></div>
     <div class="block-2"></div>
     <div class="block-3"></div>
