--- a/index.html
+++ b/index.html
@@ -3,11 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="fonts/mazzard.css" />
     <title>Бункер БОТ</title>
   </head>
   <body>
-    <div class="header"></div>
+    <div class="header">
+      <div class="wrapper">
+        <ul>
+          <li><a href="#">Команды</a></li>
+          <li>
+            <a class="ds"
+              href="https://discord.com/api/oauth2/authorize?client_id=734796897159741540&permissions=1073743936&scope=bot"
+              >Добавить в Дискорд</a
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
     <div class="block-1"></div>
     <div class="block-2"></div>
     <div class="block-3"></div>
