Added icon to site, deleted button

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="fonts/mazzard.css" />
+    <link rel="shortcut icon" href="img/icon.ico" type="image/png">
     <title>Бункер БОТ</title>
   </head>
   <body>
     <div class="header">
       <div class="wrapper">
         <ul>
-          <li><a href="#">Команды</a></li>
           <li>
             <a class="ds"
               href="https://discord.com/api/oauth2/authorize?client_id=734796897159741540&permissions=1073743936&scope=bot"
