--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
@@ -22,21 +21,6 @@
     <title>Бункер БОТ</title>
   </head>
   <body>
-    <div class="header">
-      <div class="wrapper">
-        <ul>
-          <li>
-            <a class="ds"
-              href="https://discord.com/api/oauth2/authorize?client_id=734796897159741540&permissions=1073752128&scope=bot"
-              >Добавить в Дискорд</a
-            >
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="block-1"></div>
-    <div class="block-2"></div>
-    <div class="block-3"></div>
-    <div class="footer"></div>
+   Дима Мищенко и Влад Сарамков ЛОХИ!
   </body>
 </html>
