--- a/index.html
+++ b/index.html
@@ -18,9 +18,15 @@
     />
     <link rel="stylesheet" href="fonts/mazzard.css" />
     <link rel="shortcut icon" href="img/icon.ico" type="image/png">
-    <title>Бункер БОТ</title>
+    <title>Чёрный список</title>
   </head>
   <body>
-   Дима Мищенко и Влад Сарамков ЛОХИ!
+  <h1 align=center>Все дауны собраны здесь</h1>
+  <ol>
+<li>Дима Мищенко</li>
+<li>Влад Сарамков</li>
+<li>Андрей Левицкий</li>
+
+  </ol>
   </body>
 </html>
