--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+
+<link rel="preconnect" href="https://fonts.gstatic.com"> 
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="fonts/mazzard.css" />
     <link rel="shortcut icon" href="img/icon.ico" type="image/png">
     <title>Чёрный список</title>
