--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <link rel="stylesheet" href="fonts/mazzard.css" />
     <link rel="shortcut icon" href="img/icon.ico" type="image/png">
     <title>Чёрный список</title>
+<style>
+body{font-family: 'Montserrat', sans-serif;}
+</style>
   </head>
   <body>
   <h1 align=center>Все дауны собраны здесь</h1>
