--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ body{font-family: 'Montserrat', sans-serif;}
 
 <li>Александр Морояну</li>
 
+<li>Даниил Стоянов</li>
+
   </ol>
   </body>
 </html>
